doc(*) rename to euphoria-color

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "euphoria-colors",
+  "name": "euphoria-color",
   "version": "1.0.0",
   "description": "This is an NPM friendly version of the function from the euphoria.io frontend which assigns colors, its licensed as CC v4 and was made by euphoria",
   "main": "index.js",
